--- a/JS/DOM/one.css
+++ b/JS/DOM/one.css
@@ -1,4 +1,16 @@
 body{
-    background-color: black;
+    background: linear-gradient(90deg in oklab, rgb(0, 157, 255), rgb(101, 35, 168));
     color: aliceblue;
+}
+
+#title{
+    text-align: center;
+    font-weight: bolder;
+}
+
+.bg-block{
+    margin-top: 150px;
+    justify-content: center;
+    text-align: center;
+    font-weight: lighter;
 }
